--- a/package.json
+++ b/package.json
@@ -3,16 +3,45 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.22",
+    "@expo/config-plugins": "~10.1.1",
+    "@expo/prebuild-config": "~9.0.0",
+    "@react-native-community/cli": "^20.0.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@react-navigation/stack": "^7.4.7",
+    "axios": "^1.11.0",
+    "expo": "53.0.20",
+    "expo-build-properties": "~0.14.8",
+    "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.3.2",
+    "expo-location": "~18.1.6",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-popup-menu": "^0.18.0",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.16.0",
+    "react-navigation-shared-element": "^3.1.3",
+    "expo-maps": "~0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
