--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@expo/config-plugins": "~10.1.1",
     "@expo/prebuild-config": "~9.0.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "^20.0.1",
     "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native-stack": "^7.3.25",
     "@react-navigation/stack": "^7.4.7",
@@ -22,6 +24,7 @@
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-location": "~18.1.6",
+    "expo-maps": "~0.11.0",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.17",
@@ -30,6 +33,8 @@
     "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.7.1",
     "react-native-popup-menu": "^0.18.0",
     "react-native-qrcode-svg": "^6.3.15",
@@ -37,11 +42,10 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.16.0",
-    "react-navigation-shared-element": "^3.1.3",
-    "expo-maps": "~0.11.0"
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
